# id-tagging-schema-rs

./: .gitignore  .gitmodules  Cargo.toml
id-tagging-schema/: Cargo.toml  build.rs
id-tagging-schema-types/: Cargo.toml
id-tagging-schema-types/src/: category.rs  deprecated.rs  lib.rs  preset.rs  preset_defaults.rs
id-tagging-schema/src/: category.rs  deprecated.rs  discarded.rs  lib.rs  preset.rs  preset_defaults.rs
